Calculated additional values required by Demchenko

--- a/mipt/5_term/razryv/results/answers/answers_1.1
+++ b/mipt/5_term/razryv/results/answers/answers_1.1
@@ -1,20 +1,40 @@
 D0 = -6.552406e+04
 D3 = 1.051021e+01
+Lambda_1 = -1.644213e+00
+Lambda_2 = -6.081937e-01
 D0 = -2.518759e+05
 D3 = -1.741635e+04
+Lambda_1 = 1.644213e+00
+Lambda_2 = 6.081937e-01
+a_cr^2 = 2.347057e+10
 
 D0 = -6.551926e+04
 D3 = 1.033709e+01
+Lambda_1 = -1.644136e+00
+Lambda_2 = -6.082221e-01
 D0 = -2.518807e+05
 D3 = 1.758121e+04
+Lambda_1 = 1.644136e+00
+Lambda_2 = 6.082221e-01
+a_cr^2 = 2.347080e+10
 
 D0 = 9.756917e+04
 D3 = -7.051596e+04
+Lambda_1 = -7.578469e-01
+Lambda_2 = -1.319528e+00
 D0 = -4.149692e+05
 D3 = -1.305895e+04
+Lambda_1 = 7.578469e-01
+Lambda_2 = 1.319528e+00
+a_cr^2 = 3.771861e+10
 
 D0 = 2.328868e+05
 D3 = 1.102470e+05
+Lambda_1 = -6.236247e-01
+Lambda_2 = -1.603529e+00
 D0 = -5.502868e+05
 D3 = -2.231009e+04
+Lambda_1 = 6.236247e-01
+Lambda_2 = 1.603529e+00
+a_cr^2 = 5.963518e+10
 
