--- a/mipt/5_term/razryv/results/answers/answers_1.2
+++ b/mipt/5_term/razryv/results/answers/answers_1.2
@@ -1,15 +1,30 @@
 D0 = 1.148355e+04
 D3 = 5.122296e+04
+Lambda_1 = -1.974228e+00
+Lambda_2 = -5.065272e-01
 D0 = -1.148355e+04
 D3 = 5.608898e+04
+Lambda_1 = 1.974228e+00
+Lambda_2 = 5.065272e-01
+a_cr^2 = 5.139806e+08
 
 D0 = 4.670140e+04
 D3 = 1.177898e+04
+Lambda_1 = -6.859627e-01
+Lambda_2 = -1.457805e+00
 D0 = -4.670140e+04
 D3 = 3.707300e+04
+Lambda_1 = 6.859627e-01
+Lambda_2 = 1.457805e+00
+a_cr^2 = 1.026268e+09
 
 D0 = 4.064584e+05
 D3 = 3.887242e+05
+Lambda_1 = -5.029031e-01
+Lambda_2 = -1.988455e+00
 D0 = -4.064584e+05
 D3 = -1.929475e+05
+Lambda_1 = 5.029031e-01
+Lambda_2 = 1.988455e+00
+a_cr^2 = 4.178313e+10
 
