--- a/mipt/5_term/razryv/results/answers/answers_1.6
+++ b/mipt/5_term/razryv/results/answers/answers_1.6
@@ -1,15 +1,30 @@
 D0 = -1.671103e+04
 D3 = 3.292657e+04
+Lambda_1 = -1.935682e+00
+Lambda_2 = -5.166137e-01
 D0 = -2.888897e+04
 D3 = 3.868356e+04
+Lambda_1 = 1.935682e+00
+Lambda_2 = 5.166137e-01
+a_cr^2 = 1.389171e+08
 
 D0 = 1.542102e+04
 D3 = -1.950140e+04
+Lambda_1 = -5.820212e-01
+Lambda_2 = -1.718150e+00
 D0 = -6.102102e+04
 D3 = 1.185928e+04
+Lambda_1 = 5.820212e-01
+Lambda_2 = 1.718150e+00
+a_cr^2 = 4.948598e+08
 
 D0 = 3.159242e+05
 D3 = 6.332350e+05
+Lambda_1 = -5.011287e-01
+Lambda_2 = -1.995495e+00
 D0 = -3.615242e+05
 D3 = -3.792584e+05
+Lambda_1 = 5.011287e-01
+Lambda_2 = 1.995495e+00
+a_cr^2 = 2.881317e+10
 
