--- a/mipt/5_term/razryv/results/answers/answers_1.7
+++ b/mipt/5_term/razryv/results/answers/answers_1.7
@@ -1,15 +1,30 @@
 D0 = -1.535029e+04
 D3 = 2.399196e+04
+Lambda_1 = -1.917195e+00
+Lambda_2 = -5.215954e-01
 D0 = -3.904971e+04
 D3 = 2.812343e+04
+Lambda_1 = 1.917195e+00
+Lambda_2 = 5.215954e-01
+a_cr^2 = 5.161166e+08
 
 D0 = 1.864772e+04
 D3 = -1.262576e+04
+Lambda_1 = -6.919785e-01
+Lambda_2 = -1.445132e+00
 D0 = -7.304772e+04
 D3 = 1.028461e+04
+Lambda_1 = 6.919785e-01
+Lambda_2 = 1.445132e+00
+a_cr^2 = 1.006516e+09
 
 D0 = 5.280097e+05
 D3 = 4.617799e+05
+Lambda_1 = -5.015580e-01
+Lambda_2 = -1.993787e+00
 D0 = -5.824097e+05
 D3 = -3.218853e+05
+Lambda_1 = 5.015580e-01
+Lambda_2 = 1.993787e+00
+a_cr^2 = 7.754547e+10
 
