--- a/mipt/5_term/razryv/results/answers/answers_2.1
+++ b/mipt/5_term/razryv/results/answers/answers_2.1
@@ -1,9 +1,24 @@
 D0 = 4.466086e+04
+Lambda_1 = -1.999397e+00
+Lambda_2 = -5.001508e-01
 D0 = -4.466086e+04
+Lambda_1 = 1.999397e+00
+Lambda_2 = 5.001508e-01
+a_cr^2 = 7.973560e+09
 
 D0 = 8.652013e+04
+Lambda_1 = -1.117387e+00
+Lambda_2 = -8.949449e-01
 D0 = -8.652013e+04
+Lambda_1 = 1.117387e+00
+Lambda_2 = 8.949449e-01
+a_cr^2 = 9.346345e+09
 
 D0 = 1.060414e+05
+Lambda_1 = -9.564228e-01
+Lambda_2 = -1.045563e+00
 D0 = -1.060414e+05
+Lambda_1 = 9.564228e-01
+Lambda_2 = 1.045563e+00
+a_cr^2 = 1.028611e+10
 
