--- a/mipt/5_term/razryv/results/answers/answers_2.2
+++ b/mipt/5_term/razryv/results/answers/answers_2.2
@@ -1,9 +1,24 @@
 D0 = 4.471768e+04
+Lambda_1 = -1.997015e+00
+Lambda_2 = -5.007473e-01
 D0 = -4.471768e+04
+Lambda_1 = 1.997015e+00
+Lambda_2 = 5.007473e-01
+a_cr^2 = 7.974829e+09
 
 D0 = 7.531470e+04
+Lambda_1 = -1.252115e+00
+Lambda_2 = -7.986489e-01
 D0 = -7.531470e+04
+Lambda_1 = 1.252115e+00
+Lambda_2 = 7.986489e-01
+a_cr^2 = 8.892987e+09
 
 D0 = 1.124153e+05
+Lambda_1 = -9.173335e-01
+Lambda_2 = -1.090116e+00
 D0 = -1.124153e+05
+Lambda_1 = 9.173335e-01
+Lambda_2 = 1.090116e+00
+a_cr^2 = 1.063421e+10
 
