--- a/mipt/5_term/razryv/results/answers/answers_2.3
+++ b/mipt/5_term/razryv/results/answers/answers_2.3
@@ -1,3 +1,8 @@
 D0 = 1.166719e+05
+Lambda_1 = -5.341681e-01
+Lambda_2 = -1.872070e+00
 D0 = -1.166719e+05
+Lambda_1 = 5.341681e-01
+Lambda_2 = 1.872070e+00
+a_cr^2 = 3.884086e+09
 
