--- a/mipt/5_term/razryv/results/answers/answers_2.4
+++ b/mipt/5_term/razryv/results/answers/answers_2.4
@@ -1,9 +1,24 @@
 D0 = 3.458309e+04
+Lambda_1 = -2.449485e+00
+Lambda_2 = -4.082490e-01
 D0 = -3.458309e+04
+Lambda_1 = 2.449485e+00
+Lambda_2 = 4.082490e-01
+a_cr^2 = 7.175916e+09
 
 D0 = 7.072712e+04
+Lambda_1 = -1.249534e+00
+Lambda_2 = -8.002985e-01
 D0 = -7.072712e+04
+Lambda_1 = 1.249534e+00
+Lambda_2 = 8.002985e-01
+a_cr^2 = 7.810305e+09
 
 D0 = 1.030790e+05
+Lambda_1 = -9.073418e-01
+Lambda_2 = -1.102120e+00
 D0 = -1.030790e+05
+Lambda_1 = 9.073418e-01
+Lambda_2 = 1.102120e+00
+a_cr^2 = 8.747464e+09
 
