--- a/mipt/5_term/razryv/results/answers/answers_2.5
+++ b/mipt/5_term/razryv/results/answers/answers_2.5
@@ -1,3 +1,8 @@
 D0 = 1.053131e+05
+Lambda_1 = -4.551313e-01
+Lambda_2 = -2.197168e+00
 D0 = -1.053131e+05
+Lambda_1 = 4.551313e-01
+Lambda_2 = 2.197168e+00
+a_cr^2 = 2.297409e+09
 
