--- a/mipt/5_term/razryv/results/answers/answers_2.6
+++ b/mipt/5_term/razryv/results/answers/answers_2.6
@@ -1,6 +1,16 @@
 D0 = 8.990812e+04
+Lambda_1 = -1.083842e+00
+Lambda_2 = -9.226437e-01
 D0 = -8.990832e+04
+Lambda_1 = 1.083842e+00
+Lambda_2 = 9.226437e-01
+a_cr^2 = 9.495783e+09
 
 D0 = 1.052357e+05
+Lambda_1 = -9.617491e-01
+Lambda_2 = -1.039772e+00
 D0 = -1.052359e+05
+Lambda_1 = 9.617491e-01
+Lambda_2 = 1.039772e+00
+a_cr^2 = 1.024356e+10
 
