--- a/mipt/5_term/razryv/results/answers/answers_2.8
+++ b/mipt/5_term/razryv/results/answers/answers_2.8
@@ -1,3 +1,8 @@
 D0 = 1.334122e+05
+Lambda_1 = -5.263309e-01
+Lambda_2 = -1.899945e+00
 D0 = -1.334122e+05
+Lambda_1 = 5.263309e-01
+Lambda_2 = 1.899945e+00
+a_cr^2 = 4.930705e+09
 
