--- a/mipt/5_term/razryv/results/answers/answers_1.3
+++ b/mipt/5_term/razryv/results/answers/answers_1.3
@@ -1,15 +1,30 @@
 D0 = 8.505431e+03
 D3 = 1.832615e+05
+Lambda_1 = -1.854184e+00
+Lambda_2 = -5.393208e-01
 D0 = -8.505431e+03
 D3 = 1.906448e+05
+Lambda_1 = 1.854184e+00
+Lambda_2 = 5.393208e-01
+a_cr^2 = 2.487129e+08
 
 D0 = 5.449145e+04
 D3 = -2.257989e+04
+Lambda_1 = -5.724248e-01
+Lambda_2 = -1.746954e+00
 D0 = -5.449145e+04
 D3 = 4.541990e+04
+Lambda_1 = 5.724248e-01
+Lambda_2 = 1.746954e+00
+a_cr^2 = 9.729567e+08
 
 D0 = 8.645880e+04
 D3 = -4.981230e+05
+Lambda_1 = -5.299553e-01
+Lambda_2 = -1.886952e+00
 D0 = -8.645880e+04
 D3 = -1.283325e+05
+Lambda_1 = 5.299553e-01
+Lambda_2 = 1.886952e+00
+a_cr^2 = 2.099408e+09
 
