--- a/mipt/5_term/razryv/results/answers/answers_1.4
+++ b/mipt/5_term/razryv/results/answers/answers_1.4
@@ -1,15 +1,30 @@
 D0 = 1.184971e+04
 D3 = 5.119196e+04
+Lambda_1 = -1.917195e+00
+Lambda_2 = -5.215954e-01
 D0 = -1.184971e+04
 D3 = 5.532343e+04
+Lambda_1 = 1.917195e+00
+Lambda_2 = 5.215954e-01
+a_cr^2 = 5.161166e+08
 
 D0 = 4.584772e+04
 D3 = 1.457424e+04
+Lambda_1 = -6.919785e-01
+Lambda_2 = -1.445132e+00
 D0 = -4.584772e+04
 D3 = 3.748461e+04
+Lambda_1 = 6.919785e-01
+Lambda_2 = 1.445132e+00
+a_cr^2 = 1.006516e+09
 
 D0 = 5.552097e+05
 D3 = 4.889799e+05
+Lambda_1 = -5.015580e-01
+Lambda_2 = -1.993787e+00
 D0 = -5.552097e+05
 D3 = -2.946853e+05
+Lambda_1 = 5.015580e-01
+Lambda_2 = 1.993787e+00
+a_cr^2 = 7.754547e+10
 
