--- a/mipt/5_term/razryv/results/answers/answers_1.5
+++ b/mipt/5_term/razryv/results/answers/answers_1.5
@@ -1,15 +1,30 @@
 D0 = 1.014918e+04
 D3 = 5.103337e+04
+Lambda_1 = -2.127231e+00
+Lambda_2 = -4.700947e-01
 D0 = -1.014918e+04
 D3 = 5.623208e+04
+Lambda_1 = 2.127231e+00
+Lambda_2 = 4.700947e-01
+a_cr^2 = 4.661128e+08
 
 D0 = 4.221882e+04
 D3 = 1.527651e+04
+Lambda_1 = -6.469462e-01
+Lambda_2 = -1.545724e+00
 D0 = -4.221882e+04
 D3 = 3.814515e+04
+Lambda_1 = 6.469462e-01
+Lambda_2 = 1.545724e+00
+a_cr^2 = 7.460166e+08
 
 D0 = 3.661345e+05
 D3 = 3.551389e+05
+Lambda_1 = -4.123295e-01
+Lambda_2 = -2.425245e+00
 D0 = -3.661345e+05
 D3 = -1.689137e+05
+Lambda_1 = 4.123295e-01
+Lambda_2 = 2.425245e+00
+a_cr^2 = 2.279135e+10
 
