--- a/mipt/5_term/razryv/results/answers/answers_1.8
+++ b/mipt/5_term/razryv/results/answers/answers_1.8
@@ -1,15 +1,30 @@
 D0 = -1.656790e+04
 D3 = 3.285385e+04
+Lambda_1 = -1.811687e+00
+Lambda_2 = -5.519717e-01
 D0 = -2.903210e+04
 D3 = 3.734917e+04
+Lambda_1 = 1.811687e+00
+Lambda_2 = 5.519717e-01
+a_cr^2 = 1.274782e+08
 
 D0 = 1.192349e+04
 D3 = -1.501882e+04
+Lambda_1 = -5.167453e-01
+Lambda_2 = -1.935189e+00
 D0 = -5.752349e+04
 D3 = 1.346385e+04
+Lambda_1 = 5.167453e-01
+Lambda_2 = 1.935189e+00
+a_cr^2 = 3.219584e+08
 
 D0 = 2.823389e+05
 D3 = 5.729126e+05
+Lambda_1 = -4.098369e-01
+Lambda_2 = -2.439995e+00
 D0 = -3.279389e+05
 D3 = -3.389345e+05
+Lambda_1 = 4.098369e-01
+Lambda_2 = 2.439995e+00
+a_cr^2 = 1.563930e+10
 
