--- a/mipt/5_term/razryv/results/answers/answers_2.7
+++ b/mipt/5_term/razryv/results/answers/answers_2.7
@@ -1,3 +1,8 @@
 D0 = 9.606674e+04
+Lambda_1 = -5.496538e-01
+Lambda_2 = -1.819327e+00
 D0 = -9.606674e+04
+Lambda_1 = 5.496538e-01
+Lambda_2 = 1.819327e+00
+a_cr^2 = 2.788205e+09
 
